minor test issues fixed.