@@ -20,41 +20,46 @@ import static org.mockito.Mockito.when;
 
 class FoodPreferencesServiceTest {
 
-    private final ProductRecipe firstProduct = new ProductRecipe("first product", 1.0);
-    private final ProductRecipe secondProduct = new ProductRecipe("second product", 2.0);
-    private final ProductRecipe thirdProduct = new ProductRecipe("third product", 3.0);
+    private final RecipeRepository recipeRepositoryMock = mock(RecipeRepository.class);
+    private final RecipeService recipeService = new RecipeService(recipeRepositoryMock);
 
-    private final RecipeAllegrens firstAllergens = new RecipeAllegrens(false, false, false, true, true, false, "-", true, false, false);
-    private final RecipeAllegrens secondAllergens = new RecipeAllegrens(true, false, false, false, false, false, "-", true, false, false);
-    private final RecipeAllegrens thirdAllergens = new RecipeAllegrens(false, false, false, true, false, true, "-", false, false, true);
+    private final FridgeRepository fridgeRepositoryMock = mock(FridgeRepository.class);
 
-    private final Recipe firstRecipe = new Recipe("first", "first recipe", 15, Arrays.asList(firstProduct), firstAllergens);
-    private final Recipe secondRecipe = new Recipe("second", "second recipe", 30, Arrays.asList(firstProduct, secondProduct), secondAllergens);
-    private final Recipe thirdRecipe = new Recipe("third", "third recipe", 45, Arrays.asList(firstProduct, secondProduct, thirdProduct), thirdAllergens);
+    private final FridgeService fridgeService = new FridgeService(fridgeRepositoryMock);
+    private final FoodPreferencesRepository preferencesRepositoryMock = mock(FoodPreferencesRepository.class);
 
-    private RecipeRepository recipeRepositoryMock = mock(RecipeRepository.class);
-    private RecipeService recipeService = new RecipeService(recipeRepositoryMock);
+    private final FoodPreferencesService foodPreferencesService = new FoodPreferencesService(preferencesRepositoryMock, recipeService, fridgeService);
+    private final Optional<FoodPreferences> foodPreferencesOprional = Optional.of(new FoodPreferences(false, false, false, true, false, false, "-", true, false, false));
 
-    private FridgeRepository fridgeRepositoryMock = mock(FridgeRepository.class);
 
-    private FridgeService fridgeService = new FridgeService(fridgeRepositoryMock);
-    private FoodPreferencesRepository preferencesRepositoryMock = mock(FoodPreferencesRepository.class);
+    private List<Recipe> createRecipesToTest() {
+        ProductRecipe firstProduct = new ProductRecipe("first product", 1.0);
+        ProductRecipe secondProduct = new ProductRecipe("second product", 2.0);
+        ProductRecipe thirdProduct = new ProductRecipe("third product", 3.0);
 
-    private FoodPreferencesService foodPreferencesService = new FoodPreferencesService(preferencesRepositoryMock, recipeService, fridgeService);
-    private Optional<FoodPreferences> foodPreferencesOprional = Optional.of(new FoodPreferences(false, false, false, true, false, false, "-", true, false, false));
+        RecipeAllegrens firstAllergens = new RecipeAllegrens(false, false, false, true, true, false, "-", true, false, false);
+        RecipeAllegrens secondAllergens = new RecipeAllegrens(true, false, false, false, false, false, "-", true, false, false);
+        RecipeAllegrens thirdAllergens = new RecipeAllegrens(false, false, false, true, false, true, "-", false, false, true);
 
-    @Test
-    void filterRecipeByFoodPreferences() {
-        //given
-        when(recipeService.getAllRecipe()).thenReturn(Arrays.asList(firstRecipe, secondRecipe, thirdRecipe));
-        when(foodPreferencesService.getFoodPreferencesById(any())).thenReturn(foodPreferencesOprional);
+        Recipe firstRecipe = new Recipe("first", "first recipe", 15, List.of(firstProduct), firstAllergens);
+        Recipe secondRecipe = new Recipe("second", "second recipe", 30, Arrays.asList(firstProduct, secondProduct), secondAllergens);
+        Recipe thirdRecipe = new Recipe("third", "third recipe", 45, Arrays.asList(firstProduct, secondProduct, thirdProduct), thirdAllergens);
 
-        //when
-        List<Recipe> recipes = foodPreferencesService.filterRecipeByFoodPreferences(fridgeService.getUserId());
-
-        //then
-        assertThat(recipes).hasSize(2)
-                .containsExactly(firstRecipe, secondRecipe);
-
+        return Arrays.asList(firstRecipe, secondRecipe, thirdRecipe);
     }
-}
+        @Test
+        void testIfReturnFilteredRecipeByFoodPreferences () {
+            //given
+            List<Recipe> recipesToTest = createRecipesToTest();
+            when(recipeService.getAllRecipe()).thenReturn(recipesToTest);
+            when(foodPreferencesService.getFoodPreferencesById(any())).thenReturn(foodPreferencesOprional);
+
+            //when
+            List<Recipe> recipes = foodPreferencesService.filterRecipeByFoodPreferences(fridgeService.getUserId());
+
+            //then
+            assertThat(recipes).hasSize(2)
+                    .contains(recipesToTest.get(0), recipesToTest.get(1));
+
+        }
+    }
